# debate_analyzer

./: .cursorrules  .gitignore  Dockerfile  Dockerfile.llm  Dockerfile.llm.gpu  Dockerfile.llm.ollama  Dockerfile.webapp  Makefile  README.md  alembic.ini  debate_analyzer.db  file:memdb  pyproject.toml  test.ipynb
.cursor/rules/: agent-branch-workflow.mdc  do-not-edit-deploy-notes.mdc
.cursor/skills/: local-development
.github/workflows/: build-push-ecr.yml
agent-skills/aws-deploy/: SKILL.md
agent-skills/local-development/: SKILL.md
agent-skills/segment-prompt-tuning/: SKILL.md  merge_summaries_prompt_draft.txt  merge_transcript_prompt_draft.txt  reference.md  (+2 more)
alembic/: env.py
deploy/: entrypoint.sh  entrypoint_download.sh  entrypoint_transcribe.sh  set-deploy-secrets.sh.example  submit-download-job.sh  submit-job.sh  submit-transcribe-job.sh
doc/: API.md  ARCHITECTURE.md  ARCHITECTURE_AWS.md  AWS_SETUP.md  AWS_STATS_WEB_INFRA_PLAN.md  DEPLOYMENT_AWS_BATCH.md  DEVELOPMENT.md  HOWTO.md  LLM_ANALYSIS.md  PROJECT_SETUP.md  README.md  TRANSCRIBE.md  WEBAPP.md
frontend/: index.html  package-lock.json  package.json  vite  vite.config.js
plans/: llm-segment-summary-empty-fix.md
tests/: __init__.py  test_aggregator.py  test_analysis.py  test_api_register.py  test_batch_stats.py  test_chrome_cookies_to_netscape.py  test_db.py  test_example.py  test_loader.py  test_ollama_backend.py  test_transcriber.py  test_transcript_postprocess.py  test_upload_local_data_to_db.py  test_video_downloader.py
tool/: llm_prompt_experiments.ipynb  speaker_annotator.html
(+134 files in other folders)
