[tool.poetry]
name = "debate-analyzer"
version = "0.1.0"
description = "A Python project for debate analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "debate_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
yt-dlp = {extras = ["default"], version = ">=2025.12.8"}
faster-whisper = "^1.2.1"
pyannote-audio = "^4.0.3"
soundfile = "^0.12.0"
torch = "^2.0.0"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"
boto3 = "^1.42.53"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.282"
mypy = "^1.5.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = []
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/debate_analyzer --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
